views: remove PlatformStyle::CreateLabelButtonBorder

This function was doing the wrong thing on Mac, so it has been removed and
the default implementation simply inlined into LabelButton.

BUG=649367

Review-Url: https://codereview.chromium.org/2358913006
Cr-Commit-Position: refs/heads/master@{#421188}

Former-commit-id: 8b9fd5ef2fb2722e3d6d60531622715b186492c0