ui/views/style/platform_style_mac.mm
@@ -11,11 +11,9 @@
 #include "ui/gfx/vector_icons_public.h"
 #include "ui/resources/grit/ui_resources.h"
 #include "ui/views/controls/button/label_button.h"
-#include "ui/views/controls/button/label_button_border.h"
 #include "ui/views/controls/focusable_rounded_border_mac.h"
 #import "ui/views/controls/scrollbar/cocoa_scroll_bar.h"
 #include "ui/views/style/mac/combobox_background_mac.h"
-#include "ui/views/style/mac/dialog_button_border_mac.h"
 
 #import <Cocoa/Cocoa.h>
 
@@ -61,15 +59,6 @@ std::unique_ptr<Background> PlatformStyle::CreateComboboxBackground(
 }
 
 // static
-std::unique_ptr<LabelButtonBorder> PlatformStyle::CreateLabelButtonBorder(
-    Button::ButtonStyle style) {
-  if (style == Button::STYLE_BUTTON)
-    return base::MakeUnique<DialogButtonBorderMac>();
-
-  return base::MakeUnique<LabelButtonAssetBorder>(style);
-}
-
-// static
 std::unique_ptr<ScrollBar> PlatformStyle::CreateScrollBar(bool is_horizontal) {
   return base::MakeUnique<CocoaScrollBar>(is_horizontal);
 }
@@ -79,8 +68,7 @@ SkColor PlatformStyle::TextColorForButton(
     const ButtonColorByState& color_by_state,
     const LabelButton& button) {
   Button::ButtonState state = button.state();
-  if (button.style() == Button::STYLE_BUTTON &&
-      DialogButtonBorderMac::ShouldRenderDefault(button)) {
+  if (button.style() == Button::STYLE_BUTTON && button.is_default()) {
     // For convenience, we currently assume Mac wants the color corresponding to
     // the pressed state for default buttons.
     state = Button::STATE_PRESSED;
